--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "axios": "^0.19.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-floating-action-button": "^1.0.5",
+    "react-media": "^1.10.0",
+    "react-modal": "^3.11.2",
+    "react-notifications-component": "^2.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
