--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-floating-action-button": "^1.0.5",
     "react-media": "^1.10.0",
     "react-modal": "^3.11.2",
+    "react-native-floating-action": "^1.20.0",
     "react-notifications-component": "^2.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
